--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -317,7 +317,9 @@
         h1 {
             display: flex;
             flex-wrap: wrap;
+            line-height: 1.5rem;
             font-weight: 400;
+            padding: 0.375rem 0;
             margin: 0;
 
             span:first-of-type {
@@ -327,7 +329,7 @@
             .subj-heading__span {
                 &--border {
                     padding-right: 0.5ch;
-                    border-right: 1px solid $secondary_text_color;
+                    border-right: 2px solid $border_color;
                 }
 
                 &--bold {
