--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -317,6 +317,7 @@
         h1 {
             display: flex;
             flex-wrap: wrap;
+            font-size: 1.5rem;
             line-height: 1.5rem;
             font-weight: 400;
             padding: 0.375rem 0;
