--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -316,16 +316,13 @@
 
         h1 {
             display: flex;
+            gap: 0.5ch;
             flex-wrap: wrap;
             font-size: 1.5rem;
             line-height: 1.5rem;
             font-weight: 400;
             padding: 0.375rem 0;
             margin: 0;
-
-            span:first-of-type {
-                margin-right: 0.5ch;
-            }
 
             .subj-heading__span {
                 &--border {
