--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -199,7 +199,7 @@ $policy_subject_close_background_hover: $mid_gray_3;
 
 @font-face {
     font-family: "Merriweather";
-    font-style: nbold;
+    font-style: bold;
     font-weight: 700;
     src: url("#{$additional-font-path}/Merriweather-Bold.ttf")
         format("truetype");
