feat: conditionally show public DocTypelabel

--- a/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
+++ b/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
@@ -21,6 +21,13 @@
         <template #login-banner>
             {% include "regulations/partials/login_sidebar_banner.html" %}
         </template>
+        {% if user.is_authenticated %}
+            <template #public-label>
+                <div class="label--container">
+                    <doc-type-label icon-type="external" doc-type="Public" />
+                </div>
+            </template>
+        {% endif %}
     </supplemental-content>
     {% endif %}
 
