--- a/solution/backend/cmcs_regulations/templates/admin/base_site.html
+++ b/solution/backend/cmcs_regulations/templates/admin/base_site.html
@@ -1,14 +1,40 @@
 {% extends "admin/base_site.html" %}
 
+{% block extrahead %}
+    <style>
+    form#oidc_logout {
+        display: inline;
+        margin: 0;
+        padding: 0;
+        border: none;
+        background: none;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+    }
+
+    /* Style the submit button to look like a link */
+    form#oidc_logout input[type="submit"] {
+      cursor: pointer;
+      border: none;
+      padding: 0;
+      font: inherit;
+      background: none;
+    }
+    </style>
+{% endblock %}
 {% block userlinks %}
   <div id="user-tools">
     {% if user.is_active and user.is_staff %}
       <a href="/">View site</a> /
-      <a href="{% url 'admin:logout' %}">Logout Django</a> /
-      <form action="{% url 'oidc_logout' %}" method="post">
-        {% csrf_token %}
-        <input type="submit" value="logout">
-      </form>
+     {%  if request.session.oidc_id_token  %}
+        <!-- OIDC Logout Form -->
+        <form id="oidc_logout" action="{% url 'oidc_logout' %}" method="post">
+          {% csrf_token %}
+          <input type="submit" value="LOGOUT">
+        </form>
+      {% else %}
+        <!-- Django Logout Link -->
+        <a href="{% url 'admin:logout' %}">Logout</a>
+      {% endif %}
     {% else %}
       <a href="{% url 'oidc_authentication_init' %}?next={{ request.path }}">Log in</a>
     {% endif %}
