fix: result__link display block on search page

--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -48,6 +48,10 @@
 
                     &__link {
                         margin-bottom: 4px;
+
+                        a {
+                            display: block;
+                        }
                     }
                 }
             }
