add underline for the link

--- a/solution/ui/regulations/css/scss/_layout.scss
+++ b/solution/ui/regulations/css/scss/_layout.scss
@@ -184,6 +184,7 @@ footer {
         dislay: inline-block;
         input[type="submit"] {
             background-color: transparent !important;
+            text-decoration: underline;
             color: #046791;
         }
     }
