helps if I can type display

--- a/solution/ui/regulations/css/scss/_layout.scss
+++ b/solution/ui/regulations/css/scss/_layout.scss
@@ -181,7 +181,7 @@ footer {
     }
 
     form#oidc_logout {
-        dislay: inline-block;
+        display: inline-block;
         input[type="submit"] {
             background-color: transparent !important;
             text-decoration: underline;
