--- a/solution/ui/regulations/css/scss/partials/_buttons_and_tooltip.scss
+++ b/solution/ui/regulations/css/scss/partials/_buttons_and_tooltip.scss
@@ -4,6 +4,13 @@
 
 @import "../application_settings";
 
+@mixin sidebar-hr-styles {
+    height: 1px;
+    background: $light_gray;
+    border: none;
+    margin: 15px 0;
+}
+
 .text-btn {
     border: none;
     background: none;
@@ -210,7 +217,8 @@
         &.reg-history-link-container {
             .tooltip.clicked {
                 width: calc(
-                    80% - $spacer-2 - $spacer-2 - $collapsed-sidebar-width - 40px
+                    80% - $spacer-2 - $spacer-2 - $collapsed-sidebar-width -
+                        40px
                 );
 
                 @include screen-sm {
@@ -325,13 +333,11 @@ aside.right-sidebar {
                 font-size: $font-size-xxs;
             }
         }
+    }
 
-        + hr {
-            height: 1px;
-            background: $light_gray;
-            border: none;
-            margin: 15px 0;
-        }
+    hr,
+    .authed__container + hr {
+        @include sidebar-hr-styles;
     }
 }
 
