EREGCSC-2322-Fix login to redirect correctly (#1135)
* fix login to redirect correctly

* remove session refresh

* make it more simple as a link

--- a/solution/backend/cmcs_regulations/templates/admin/login.html
+++ b/solution/backend/cmcs_regulations/templates/admin/login.html
@@ -21,7 +21,7 @@
    {{ block.super }}
    {% if EUA_FEATUREFLAG %}
       <div class="okta_login_container">
-        Or Login With &nbsp;<a href="{% url 'oidc_authentication_init' %}">EUA</a>
+        Or Login With &nbsp;<a href="{% url 'oidc_authentication_init' %}?next={{ next }}">EUA</a>
       </div>
    {% endif %}
    {% if form.errors %}
