--- a/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
+++ b/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
@@ -138,6 +138,13 @@
         color: $primary_link_color;
         text-decoration: none;
         font-size: $font-size-sm;
+
+        > span {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 6px;
+        }
     }
 
     .supplemental-content-external-link {
@@ -147,7 +154,19 @@
     }
 }
 
+.internal-docs__container {
+    .supplemental-content-description > span {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 6px;
+    }
+}
+
 .supplemental-content-container
+    .supplemental-content-category
+    .category-content:not(.show-more-content),
+.internal-docs__container
     .supplemental-content-category
     .category-content:not(.show-more-content) {
     margin-left: 10px;
