feat: tweak login call to action

--- a/solution/backend/regulations/templates/regulations/partials/login_sidebar_banner.html
+++ b/solution/backend/regulations/templates/regulations/partials/login_sidebar_banner.html
@@ -2,10 +2,10 @@
     {% if user.is_authenticated %}
         Resources you can access include policy documents internal to CMCS.
     {% else %}
-        CMCS staff can
+        CMCS staff participating in the Policy Repository pilot can
         <a id="loginSidebar" href="{% url 'login' %}?next={{ request.path }}"
-            >sign in with CMS EUA</a
+            >sign in</a
         >
-        to access additional internal documents.
+        to see internal resources.
     {% endif %}
 </div>
