EREGCSC-2449-enablue-eua-login-by-default

--- a/solution/ui/regulations/css/scss/main.scss
+++ b/solution/ui/regulations/css/scss/main.scss
@@ -38,6 +38,7 @@ $eregs-image-path: "../images" !default;
 @import "partials/dropdown";
 @import "partials/expanded_toc";
 @import "partials/about";
+@import "partials/login";
 @import "partials/browser_not_supported";
 @import "partials/buttons_and_tooltip";
 @import "partials/jump_to";
