EREGCSC-2346 -- Internal Docs in Reader Sidebar (#1107)
* feat: right sidebar login banner

* test: update doctype label snapshot test assertion to use appropriate props

* feat: conditionally show public DocTypelabel

* Enable debug mode

* Fix 500 error when repo categories are present

* Remove debug = true

* feat: api method and container component setup

* feat: further table setting; get categories

* fix: inherit from correct mixin for section and subpart queries

* feat: get selected section and fetch on hash change

* feat: add mitt eventbus to replace deprecated vue 2.x root methods

* feat: clear eventbus listeners before destroy/unmount

* feat: fetch and watch logic

* feat: display crude item list

* feat: transform and load props in correct formats

* feat: getFileTypeButton moved to utils

* feat: logic cleanup

* feat: tweaks to bettery style doc lists

* feat: iron out styling

* chore: refactor existing categories method

for internal and external documents

* chore: remove comments

* emit and listen to clear sections event

* chore: formatting

* feat: add more space to bottom of right sidebar

* fix: tweak show if empty logic and category description logic

* test: update API test suite

* feat: tweak login call to action

* test: add unit tests for formatResourceCategories utility method

* chore: improve jsdoc documentation

* test: add e2e test coverage

* test: update contains assertion to take env into account

* test: remove potentially flaky assertions

* feat: remove unneeded styles that introduced side effect

---------

Co-authored-by: Caleb Godwin <cgodwin@fearless.tech>

--- a/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
+++ b/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
@@ -1,6 +1,7 @@
 {% load string_formatters %}
 
 {{ categories|json_script:"categories" }}
+{{ node_list|json_script:"node_list" }}
 
 <section id="right-sidebar" data-cache-key="sidebar" data-cache-value="{{label_id}}">
     {% include "regulations/partials/view-button.html" %}
@@ -8,16 +9,41 @@
     <hr />
 
     {% if node_list %}
+        <supplemental-content
+            api-url="{{ API_BASE }}"
+            title="{{ title }}"
+            part="{{ reg_part }}"
+            resources-url="{% url 'resources' %}"
+            :resource-display=true
+            :sections="{{ node_list.sections }}"
+            :subparts="{{ node_list.subparts }}"
+        >
+            <template #login-banner>
+                {% include "regulations/partials/login_sidebar_banner.html" %}
+            </template>
+            {% if user.is_authenticated %}
+                <template #public-label>
+                    <div class="label__container">
+                        <doc-type-label icon-type="external" doc-type="Public" />
+                    </div>
+                </template>
+            {% endif %}
+        </supplemental-content>
+        {% if user.is_authenticated %}
+            <div class="authed__container">
+                <hr />
+                <div class="label__container label__container--internal">
+                    <doc-type-label icon-type="internal" doc-type="Internal" />
+                </div>
 
-    <supplemental-content
-        api-url="{{ API_BASE }}"
-        title="{{ title }}"
-        part="{{ reg_part }}"
-        resources-url="{% url 'resources' %}"
-        :resource-display=true
-        :sections="{{ node_list.sections }}"
-        :subparts="{{ node_list.subparts }}"
-    ></supplemental-content>
+                <internal-docs-container
+                    api-url="{{ API_BASE }}"
+                    title="{{ title }}"
+                    part="{{ reg_part }}"
+                ></internal-docs-container>
+            </div>
+            <div class="login__spacer"></div>
+        {% endif %}
     {% endif %}
 
 </section>
