feat: construct results header based on searchQuery existence

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -346,6 +346,10 @@
         .search-results-count {
             padding: 0 1rem;
             margin-bottom: 2rem;
+
+            .search-query__span {
+                font-weight: 700;
+            }
         }
 
         .doc-list__document {
