--- a/solution/ui/regulations/css/scss/partials/_about.scss
+++ b/solution/ui/regulations/css/scss/partials/_about.scss
@@ -14,6 +14,12 @@ main.about {
         clear: both;
     }
 
+    button.action-btn.default-btn {
+        margin-top:16px;
+        color: #fff;
+        font-weight: bold;
+    }
+
     .ds-l-container {
         padding: 0;
 
