--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -575,3 +575,11 @@ select {
     height: 32px;
     padding: 0 12px;
 }
+
+.div__login-sidebar {
+    background-color: $secondary_background_color;
+    border: 1px solid $border_color;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    margin: 1rem 0;
+}
