fix: block display for external link

--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -63,6 +63,10 @@
                     &__link {
                         a {
                             text-decoration: none;
+
+                            &.external {
+                                display: block;
+                            }
                         }
                     }
                 }
