EREGCSC-2538 -- Replace Search.gov results with public `content-search` results on Combined Search (#1173)
* feat: very basic PolicyDocsResults implementation in Search view

* feat: tweak empty state for page out of range

* style: tweak result item category labels styles

* chore: remove SearchGov files, methods, etc

* chore: remove unnecessary prop

* feat: only return external/public documents

* feat: hide subject chips on search page

* feat: add internal docs to search results if logged in

* test: remove search.gov fallback test

* fix: block display for external link

* test: update search page tests

* feat: escape Text and CharFields for SupContent/FR Docs on save

* Revert "feat: escape Text and CharFields for SupContent/FR Docs on save"

This reverts commit 7a8411cdcd5e159f27b5f86217b9055be0247f17.

--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -63,7 +63,10 @@
                     &__link {
                         a {
                             text-decoration: none;
-                            display: block;
+
+                            &.external {
+                                display: block;
+                            }
                         }
                     }
                 }
