feat: remove about and resources header links; add Find by Subject

--- a/solution/backend/regulations/templates/regulations/partials/header.html
+++ b/solution/backend/regulations/templates/regulations/partials/header.html
@@ -9,9 +9,8 @@
         ></jump-to>
         <header-links
             slot="links"
-            about-url="{% url 'about' %}"
-            resources-url="{% url 'resources' %}"
             statutes-url="{% url 'statutes' %}"
+            subjects-url="{% url 'subjects' %}"
         ></header-links>
         <header-search
             slot="search"
