--- a/solution/backend/regulations/templates/regulations/statute.html
+++ b/solution/backend/regulations/templates/regulations/statute.html
@@ -25,8 +25,8 @@
     data-about-url="{% url 'about' %}"
     data-custom-url="{{ CUSTOM_URL }}"
     data-home-url="{% url 'homepage' %}"
-    data-resources-url="{% url 'resources' %}"
     data-search-url="{% url 'search' %}"
+    data-subjects-url="{% url 'subjects' %}"
     data-host="{{ host }}"
 ></div>
 {% endblock %}
