--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -24,9 +24,9 @@
     data-about-url="{% url 'about' %}"
     data-custom-url="{{ CUSTOM_URL }}"
     data-home-url="{% url 'homepage' %}"
-    data-resources-url="{% url 'resources' %}"
     data-search-url="{% url 'search' %}"
     data-host="{{ host }}"
     data-statutes-url="{% url 'statutes' %}"
+    data-subjects-url="{% url 'subjects' %}"
 ></div>
 {% endblock %}
