--- a/solution/backend/regulations/templates/regulations/subjects.html
+++ b/solution/backend/regulations/templates/regulations/subjects.html
@@ -25,9 +25,9 @@
     data-custom-login-url="{% url 'custom_login' %}"
     data-custom-url="{{ CUSTOM_URL }}"
     data-home-url="{% url 'homepage' %}"
-    data-resources-url="{% url 'resources' %}"
     data-search-url="{% url 'search' %}"
     data-statutes-url="{% url 'statutes' %}"
+    data-subjects-url="{% url 'subjects' %}"
     data-host="{{ host }}"
     data-is-authenticated="{{ is_authenticated }}"
     data-has-editable-job-code="{{ has_editable_job_code }}"
