feat: update titles to all pages except selected subject

--- a/solution/backend/regulations/templates/500.html
+++ b/solution/backend/regulations/templates/500.html
@@ -1,5 +1,7 @@
 {% extends "error_base.html" %}
 
+{% block title %}Error 500 | Medicaid & CHIP eRegulations{% endblock %}
+
 {% block error_code %}
     500
 {% endblock %}
