--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -3,7 +3,7 @@
 {% load render_nested %}
 
 {% block title %}
-Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
+Medicaid &amp; CHIP eRegulations
 {% endblock %}
 
 {% block spa_styles %}
