--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -2,9 +2,7 @@
 {% load static %}
 {% load render_nested %}
 
-{% block title %}
-Medicaid &amp; CHIP eRegulations
-{% endblock %}
+{% block subtitle %}{% endblock %}
 
 {% block spa_styles %}
 <link
