--- a/solution/backend/regulations/templates/500.html
+++ b/solution/backend/regulations/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "error_base.html" %}
 
-{% block title %}Error 500 | Medicaid & CHIP eRegulations{% endblock %}
+{% block subtitle %}Error 500 | {% endblock %}
 
 {% block error_code %}
     500
