--- a/solution/backend/regulations/templates/error_base.html
+++ b/solution/backend/regulations/templates/error_base.html
@@ -1,7 +1,10 @@
 {% extends "regulations/base.html" %}
 {% load static %}
 
-{% block title %}Page Not Found | Medicaid & CHIP eRegulations{% endblock %}
+{% block title %}
+    {% block subtitle %}Page Not Found | {% endblock %}
+    Medicaid &amp; CHIP eRegulations
+{% endblock %}
 
 {% block header %}
     {% include "regulations/partials/header.html" %}
