--- a/solution/backend/regulations/templates/regulations/subjects.html
+++ b/solution/backend/regulations/templates/regulations/subjects.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load string_formatters %}
 
-{% block title %} {% if subject_name %} {{ subject_name }} | {% endif %}Find by Subject | Medicaid &amp; CHIP eRegulations{% endblock %}
+{% block subtitle %} {% if subject_name %} {{ subject_name }} | {% endif %}Find by Subject | {% endblock %}
 
 {% block spa_styles %}
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
