feat: better name for title_prefix; realize error_base extends base

--- a/solution/backend/regulations/templates/500.html
+++ b/solution/backend/regulations/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "error_base.html" %}
 
-{% block subtitle %}Error 500 | {% endblock %}
+{% block title_prefix %}Error 500 | {% endblock %}
 
 {% block error_code %}
     500
