--- a/solution/backend/regulations/templates/error_base.html
+++ b/solution/backend/regulations/templates/error_base.html
@@ -1,10 +1,7 @@
 {% extends "regulations/base.html" %}
 {% load static %}
 
-{% block title %}
-    {% block subtitle %}Page Not Found | {% endblock %}
-    Medicaid &amp; CHIP eRegulations
-{% endblock %}
+{% block title_prefix %}Page Not Found | {% endblock %}
 
 {% block header %}
     {% include "regulations/partials/header.html" %}
