--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load render_nested %}
 
-{% block subtitle %}{% endblock %}
+{% block title_prefix %}{% endblock %}
 
 {% block spa_styles %}
 <link
