--- a/solution/backend/regulations/templates/regulations/login.html
+++ b/solution/backend/regulations/templates/regulations/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static '/vite/index.css' %}" />
 {% endblock %}
 
-{% block subtitle %}Single sign-on to CMCS | {% endblock %}
+{% block title_prefix %}Single sign-on to CMCS | {% endblock %}
 
 {% block header %}
     {% include "regulations/partials/header.html" %}
