--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -8,6 +8,7 @@ CSS/Javascript etc., should inherit from this template.
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
+    {% if not IS_ADMIN_USER %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script nonce="{{ request.csp_nonce }}" async src="https://www.googletagmanager.com/gtag/js?id={{ GA_ID }}"></script>
     <script nonce="{{ request.csp_nonce }}">
@@ -16,6 +17,7 @@ CSS/Javascript etc., should inherit from this template.
         function gtag(){dataLayer.push(arguments);}
         gtag("js", new Date());
         gtag("config", "{{ GA_ID }}");
+    {% endif %}
     </script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=11; IE=EDGE">
