EREGCSC-2313 -- Update `<title>` tags (#1207)
* feat: update titles to all pages except selected subject

* feat: watch subject name parts to update page title tag

* chore: prettier formatting; adding underscore in front of unused function param

* test: start title-tags test suite

* feat: set page title in nav guard before URL updates

* feat: provide subject name in django view if in query params

* feat: refine nav guard

* fix: handle multiple error types when getting Subject in view

* feat: add popstate condition to nav guard

* feat: better handle django template blocks for title

* test: various subjects page states should have expected title

* feat: better name for title_prefix; realize error_base extends base

--- a/solution/backend/regulations/templates/500.html
+++ b/solution/backend/regulations/templates/500.html
@@ -1,5 +1,7 @@
 {% extends "error_base.html" %}
 
+{% block title_prefix %}Error 500 | {% endblock %}
+
 {% block error_code %}
     500
 {% endblock %}
