--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -1,7 +1,7 @@
 {% extends "regulations/base.html" %}
 {% load static %}
 
-{% block title %}About This Tool | Medicaid & CHIP eRegulations{% endblock %}
+{% block title_prefix %}About This Tool | {% endblock %}
 
 {% block header %}
     {% include "regulations/partials/header.html" %}
