--- a/solution/backend/cmcs_regulations/templates/admin/base_site.html
+++ b/solution/backend/cmcs_regulations/templates/admin/base_site.html
@@ -26,16 +26,14 @@
   <div id="user-tools">
     {% if user.is_active and user.is_staff %}
       <a href="/">View site</a> /
-     {%  if request.session.oidc_id_token  %}
-        <!-- OIDC Logout Form -->
-        <form id="oidc_logout" action="{% url 'oidc_logout' %}" method="post">
-          {% csrf_token %}
-          <input type="submit" value="LOGOUT">
-        </form>
+      {% if request.session.oidc_id_token %}
+      <form id="oidc_logout" action="{% url 'oidc_logout' %}" method="post">
       {% else %}
-        <!-- Django Logout Link -->
-        <a href="{% url 'admin:logout' %}">Logout</a>
+      <form id="oidc_logout" method="post" action="{% url 'logout' %}?next=/">
       {% endif %}
+        {% csrf_token %}
+        <input type="submit" value="LOGOUT">
+      </form>
     {% else %}
       <a href="{% url 'oidc_authentication_init' %}?next={{ request.path }}">Log in</a>
     {% endif %}
