--- a/solution/backend/regulations/templates/regulations/partials/login_indicator.html
+++ b/solution/backend/regulations/templates/regulations/partials/login_indicator.html
@@ -2,15 +2,18 @@
 <div id="loginIndicator">
     <span class="span__login-lamp span__login-lamp--success"></span>
     <span class="span__login-greeting">Hello, <b>{{ user.username }}</b>!</span>
-    {%  if request.session.oidc_id_token  %}
-        <!-- OIDC Logout Form -->
-        <form id="oidc_logout" action="{% url 'oidc_logout' %}" method="post">
-            {% csrf_token %}
-            <input type="submit" value="Log Out">
-        </form>
-    {% else %}
-        <a id="logout" href="{% url 'logout' %}?next={{ request.path }}">Log Out</a>
-    {% endif %}
+    <form
+        id="oidc_logout"
+        method="post"
+        {% if request.session.oidc_id_token %}
+            action="{% url 'oidc_logout' %}"
+        {% else %}
+            action="{% url 'logout' %}?next={{ request.path }}"
+        {% endif %}
+    >
+        {% csrf_token %}
+        <input type="submit" value="Log Out" />
+    </form>
 {% else %}
 <div id="loginIndicator" class="display-none">
     <span class="span__login-lamp span__login-lamp--error"></span>
