--- a/solution/backend/regulations/templates/regulations/partials/login_indicator.html
+++ b/solution/backend/regulations/templates/regulations/partials/login_indicator.html
@@ -12,7 +12,7 @@
         {% endif %}
     >
         {% csrf_token %}
-        <input type="submit" value="Log Out" />
+        <input id="logout" type="submit" value="Log Out" />
     </form>
 {% else %}
 <div id="loginIndicator" class="display-none">
