chore: ignore vuetify in django templates and clickaway for now

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -65,9 +65,9 @@
             <div class="cta__container">
                 <div class="cta">
                     <div class="resources__container">
-                        <recent-resources
+                        <!--recent-resources
                             api-url={{ API_BASE }}
-                        />
+                        /-->
                     </div>
                     <div class="policy-materials__container">
                         <div class="policy-materials">
