--- a/solution/backend/cmcs_regulations/templates/admin/base_site.html
+++ b/solution/backend/cmcs_regulations/templates/admin/base_site.html
@@ -25,7 +25,7 @@
 {% block userlinks %}
   <div id="user-tools">
     {% if user.is_active and user.is_staff %}
-      <a href="/">View site</a> /
+      <a href="{% url 'homepage' %}">View site</a> /
       <form
         id="oidc_logout"
         method="post"
