--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -37,6 +37,7 @@ CSS/Javascript etc., should inherit from this template.
         <link rel="stylesheet" href="{% static '/css/main.css' %}?{{ DEPLOY_NUMBER }}" />
     </head>
     <body class="ds-base {% block body_class %}{% endblock %}">
+        {% block outside_vue %}{% endblock %}
         <div id="vue-app">
             {% block blocking_modal %}
                 <blocking-modal
