--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -25,11 +25,12 @@
 <main>
     <nav id="placeholderNav"></nav>
     <left-nav-collapse contents-description="table of contents">
-        <toc-container
-            slot="nav-contents"
-            api-url="{{ API_BASE }}"
-            home-url="{% url 'homepage' %}"
-        ></toc-container>
+        <template #nav-contents>
+            <toc-container
+                api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
+            ></toc-container>
+        </template>
     </left-nav-collapse>
     <div id="main-content">
         <div class="top-container">
@@ -65,9 +66,9 @@
             <div class="cta__container">
                 <div class="cta">
                     <div class="resources__container">
-                        <!--recent-resources
+                        <recent-resources
                             api-url={{ API_BASE }}
-                        /-->
+                        >
                     </div>
                     <div class="policy-materials__container">
                         <div class="policy-materials">
