chore: better name style blocks in django templates

--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -33,7 +33,7 @@ CSS/Javascript etc., should inherit from this template.
             {% endblock %}
         </title>
         {% include "regulations/partials/favicon.html" %}
-        {% block spa_styles %}
+        {% block custom_styles %}
             <link rel="stylesheet" href="{% static '/js/style.css' %}?{{ DEPLOY_NUMBER }}" />
         {% endblock %}
         <link
