--- a/solution/backend/regulations/templates/regulations/login.html
+++ b/solution/backend/regulations/templates/regulations/login.html
@@ -1,8 +1,7 @@
 {% extends "regulations/base.html" %}
 {% load static %}
 
-{% block spa_styles %}
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+{% block custom_styles %}
     <link rel="stylesheet" href="{% static '/vite/index.css' %}" />
 {% endblock %}
 
