--- a/solution/backend/regulations/templates/regulations/partials/node_types/APPENDIX.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/APPENDIX.html
@@ -18,11 +18,12 @@
                 hover
                 click
             >
-                <copy-citation
-                    slot="tooltip-content"
-                    hash="{{node.label | join:'-'}}"
-                    formatted-citation="{{formatted_citation}}"
-                ></copy-citation>
+                <template #tooltip-content>
+                    <copy-citation
+                        hash="{{node.label | join:'-'}}"
+                        formatted-citation="{{formatted_citation}}"
+                    ></copy-citation>
+                </template>
             </tooltip-container>
         {% endif %}
         {{node.title}}
