--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -5,6 +5,8 @@
 @import "../application_settings";
 
 .error-msg__container {
+    font-size: $font-size-lg;
+
     .error__msg {
         .error-msg__common {
             &--first-letter {
