EREGCSC-2592 -- Return a better error message when search times out (#1224)
* feat: set up subjects error condition; create mock error method

* feat: first pass at SearchErrorMsg component

* feat: add surveyUrl; add SearchErrorMsg to combined search

* test: snapshot test and conditional assertions

* style: strong searchQuery style; proper font size

* chore: throw generic error for regResults

* chore: only show search results heading on subj if there's a searchQuery

* test: update snapshot to include strong tags

* feat: add Search Results header for more states

* chore: cleanup

* feat: update/generalize error message

* feat: fix error msg text; tests

* chore: re-enable search requests

* chore: remove unused style rule

--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -4,6 +4,10 @@
 
 @import "../application_settings";
 
+.error-msg__container {
+    font-size: $font-size-lg;
+}
+
 .search-page {
     #searchApp.search-view {
         display: flex;
